# CatDetection

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: f43089673865_add_hyperparam_search.py  f98fa953c41b_initial_schema.py
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  database.py  logging.py  security.py
app/ml/: detector.py  embeddings.py  identifier.py  model_registry.py
app/models/: __init__.py  camera.py  cat.py  event.py  hyperparam_search.py  recording.py  training_job.py  user.py
app/schemas/: camera.py  cat.py  event.py  recording.py  training.py  user.py
app/services/: camera_health.py  detection_pipeline.py  event_service.py  frame_grabber.py  notification_service.py  recording_service.py  stream_manager.py
app/templates/: base.html  cameras.html  cats.html  dashboard.html  events.html  login.html  recordings.html  test.html  training.html
docker/: Dockerfile.jetson  Dockerfile.server  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
scripts/: benchmark.py  create_admin.py  export_model.py  prepare_data.py  setup_dev.sh  sync_and_train.sh  train_identifier.py  training_client.sh  training_server.py
tests/: conftest.py  test_test_endpoint.py
tests/test_api/: test_auth.py  test_cameras.py  test_cats.py  test_events.py  test_health.py  test_recordings.py  test_training.py
tests/test_ml/: test_embeddings.py
tests/test_services/: test_frame_grabber.py  test_model_registry.py  test_security.py  (+2 more)
(+18 files in other folders)
